[tool.poetry]
name = "mashups"
version = "0.1.0"
description = ""
authors = ["Callista Chang <changcallista@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.21.0"
scipy = "^1.7.0"
librosa = "^0.8.1"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
