[tool.poetry]
name = "mashups"
version = "0.1.0"
description = ""
authors = ["Callista Chang <changcallista@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
scipy = "^1.4.1"
librosa = "^0.8.0"
spleeter = "^2.2.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
